--- a/angular-cats/angular-cats/tsconfig.json
+++ b/angular-cats/angular-cats/tsconfig.json
@@ -19,7 +19,7 @@
     "target": "es2020",
     "module": "es2020",
     "strictPropertyInitialization": false,
-    "lib": ["es2020", "dom"]
+    "lib": ["es2020", "es5", "es6", "dom", "dom.iterable"]
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
